--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ textarea {
 }
 
 button {
-    background-color: #28a745;
+    background-color: #CCE5FF;
     color: white;
     padding: 10px 20px;
     border: none;
@@ -246,3 +246,4 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #ddd;
 }
+
