--- a/style.css
+++ b/style.css
@@ -216,7 +216,7 @@ button {
 }
 
 button:hover {
-    background-color: #218838;
+    background-color: #CCE5FF;
 }
 
 /* Tables */
@@ -246,4 +246,5 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #ddd;
 }
+
 
