--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ aside h2 {
 
 .tab-button {
     background-color: transparent;
-    border: none;
+    border: solid;
     padding: 10px 15px;
     cursor: pointer;
     font-size: 1rem;
@@ -245,6 +245,7 @@ tr:nth-child(even) {
 tr:hover {
     background-color: #ddd;
 }
+
 
 
 
